# project3-aws

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
airflow/: .gitignore  README.md
airflow/dags/: nyc_tlc_aws.py
dbt/: dbt_project.yml  profiles.example.yml
dbt/macros/: generate_schema_name.sql
dbt/models/marts/: _marts.yml  agg_daily_kpis.sql  agg_hour_of_day.sql  agg_pickup_zone.sql  dim_date.sql  dim_payment_type.sql  dim_rate_code.sql  dim_vendor.sql  dim_zone.sql  fct_trips.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_taxi_zones.sql  stg_yellow_trips.sql
dbt/seeds/: payment_type.csv  rate_code.csv  taxi_zones.csv  vendor.csv
dbt/tests/: assert_agg_daily_kpis_reconciles.sql  assert_agg_hour_of_day_reconciles.sql  assert_agg_pickup_zone_reconciles.sql  assert_total_amount_reconciliation.sql
docs/: Project3_AWS_Brief.md  decisions.md
docs/specs/: milestone_b_ingest_lambda_bronze.md  milestone_c_dbt_athena.md  milestone_d_airflow_cosmos.md  terraform_foundation.md
iam/: README.md  dev-user-policy.json
ingestion/: download_tlc.py  upload_to_landing.py
lambda/register_partition/: handler.py
sql/ddl/: bronze_yellow_taxi.sql
terraform/: .terraform.lock.hcl  athena.tf  budget.tf  glue.tf  glue_tables.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  s3_notification.tf  terraform.tfvars.example  variables.tf  versions.tf
